tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/valid-syntax-with-invalid-value/input.js
import foo from "foo.json" assert { type: "json", lazy: true, startAtLine: 1 };
